# qkd-kem-provider

./: .gitignore  ALGORITHMS.md  CMakeLists.txt  LICENSE.txt  README.md  RELEASE.md  run_oqs_tests.sh  test_kems.sh
benchmarks/: config.py  data_analysis.ipynb  functions.py  kem_bench_20250114.csv  kem_bench_20250114_20_iter.csv  kem_bench_20250115_100_iter.csv
certs/: generate_certs.sh  set_env.sh
docs/: migration.md  protocol.md
examples/: static_oqsprovider.c
oqsprov/: CMakeLists.txt  oqs_ctx.c  oqs_ctx.h  oqs_decode_der2key.c  oqs_encode_key2any.c  oqs_hyb_kem.c  oqs_kem.c  oqs_kmgmt.c  oqs_prov.h  oqs_qkd_ctx.c  oqs_qkd_ctx.h  oqs_qkd_etsi_api_wrapper.c  oqs_qkd_etsi_api_wrapper.h  oqs_qkd_kem.c  oqs_qkd_kem.h  oqsdecoders.inc  oqsencoders.inc  oqsprov.c  oqsprov_capabilities.c  oqsprov_keys.c
qkdkem/: algorithms.c  algorithms.h  internal.h  kem.c  keymgmt.c  provider.c  qkd.c  qkd.h
scripts/: README.md  build.sh  common.py  env.sh  fullbuild.sh  install_openssl3.sh  install_oqsprovider.sh  openssl-ca.cnf  oqs_env.sh  oqsprovider-certgen.sh  oqsprovider-certverify.sh  oqsprovider-cmssign.sh  oqsprovider-cmsverify.sh  oqsprovider-externalinterop.sh  oqsprovider-pkcs12gen.sh  oqsprovider.rb  qkdkem.cnf  runtests.sh  test.sh  test_qkd_kem_tls.py
test/: CMakeLists.txt  oqs.cnf  oqs_bench_kems.c  oqs_test_endecode.c  oqs_test_evp_pkey_params.c  oqs_test_groups.c  oqs_test_kems.c  provider_to_provider_test.c  test_common.h  tls_test.c  tlstest_helpers.c  tlstest_helpers.h
